Fix throw false exception and repair some logic